--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 </DOC.HTML>
-<html>
+<html lang="en">
   <head>
-    <title>Giới Thiệu Bản Thân</title>==&0
+    <H1>Giới Thiệu Bản Thân</H1>
   </head>
   <body>
-    <div class= "container"> grid
-      <div class="profile">
+    <div class= "container"> 
+      <div class="">
         <p>Họ và tên: Lư Thị Như Mỹ</p>
         <p>Tuổi: 18</p>
         <p>Ngày sinh: 30/01/2005</p>
