--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <H1>Giới Thiệu Bản Thân</H1>
+    <style> 
+      .box{ 
+        background-color: aqua;
+        width: 200px; height: 200px;
+        border: 1px dotted redred;
+        margin: 5px ;
+        padding: 6px ;
+    </style>
   </head>
   <body>
     <div class= "container"> 
-      <div class="">
+      <div class="box">
         <p>Họ và tên: Lư Thị Như Mỹ</p>
         <p>Tuổi: 18</p>
         <p>Ngày sinh: 30/01/2005</p>
