--- a/index.html
+++ b/index.html
@@ -24,3 +24,69 @@
     </div>
 </body>
 </html>
+
+</DOC.HTML>
+<html>
+    <head>
+        <H1> MY PAGE</H1>
+        <style>
+            body{
+                background: pink;
+                color: black;
+            }
+        </style>
+    </head>
+    <body>
+        <img src="https://i.pinimg.com/236x/e1/6c/70/e16c704fc0b655e553dd7a1a8a00475d.jpg" alt ="">
+        <p><strong> <i> LƯ THỊ NHƯ  (sinh viên) </i></strong></p>
+        <strong><ol type="I"> 
+            <li> THÔNG TIN CÁ NHÂN </strong>
+                <ul>
+                    <li> Giới tính: Nữ</li>
+                    <li> Ngày sinh: 30/01/2005</li>
+                    <li> Quê quán: Tân Bằng, Thới Bình, Cà Mau</li>
+                </UL>
+            </li>
+            <li><strong>MẠNG XÃ HỘI </strong>
+                <ul>
+                    <li>Facebook:</li>
+                    <li>Instagram: </li>
+                </UL>
+            </li>
+            <li><strong> GIỚI THIỆU BẢN THÂN</strong>
+                <ul>
+                    <li> Là sinh viên năm nhất -K49</li>
+                    <li> Ngành: Sư phạm Tin học</li>
+                    <li> Khoa: <a href =" https://hcmue.edu.vn/vi/khoa-bo-mon/khoa-cntt?fbclid=IwAR2TL6rdt9VoQPmBHVoB-ppUWlI_fbGFRQzCmkIu3V3GVHY0TAAsDDfa5Lk"> Công nghệ thông tin </a> </li>
+                </ul>
+            </li>
+             <li><strong> ĐIỂM MẠNH </strong>  
+                <ul>
+                    <li> Hòa đồng, thân thiện</li>
+                    <li> Độc lập trong công việc và cuộc sống </li>
+                    <li> Có khả năng thích ứng với môi trường nhanh chóng</li>
+                    <li> Có trách nhiệm với bản thân, gia đình và trong công việc, học tập</li>
+                </ul>     
+            </li>
+            <li><strong> HỌC VẤN</strong>  
+                <ul>
+                    <li>2011-2016: Trường Tiểu học Tam Đông 2.HM</li>
+                    <li>2016-2020: Trường THCS Tam Đông 1.HM </li>
+                    <li>2020-2023: Trường THPT Lý Thường Kiệt.HM</li>
+                    <li>2023-nay:  Trường đại học Sư phạm TP.HCM</li>
+                </ul>     
+            </li>
+           
+            <li><strong> MỤC TIÊU </strong>
+                <UL>
+                    <li>Nâng cao trình độ giao tiếp Tiếng Anh</li>
+                    <li>Học thêm 1 ngôn ngữ cụ thể là Tiếng Trung</li>
+                    <li>Mở rộng các mối quan hệ trong học tập và làm việc</li>
+                </UL>
+            </li>
+            <li><strong> SỞ THÍCH </strong>
+            </li>
+        </ol>
+
+    </body>
+</html>
