--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p>Tuổi: 18</p>
         <p>Ngày sinh: 30/01/2005</p>
         <p>Số điện thoại: 0349862***</p>
-        <p>Địa chỉ: 351A, Lạc Long Quân, Phường 5, Quận 11</p>
-        <p>Email: luythinhumy2000tb@gmail.com</p>
+        <p>Địa chỉ: phường x, quận y, thành phố z</p>
+        <p>Email: luythinhumy******@gmail.com</p>
       </div>
     </div>
 </body>
@@ -38,13 +38,13 @@
     </head>
     <body>
         <img src="https://i.pinimg.com/236x/e1/6c/70/e16c704fc0b655e553dd7a1a8a00475d.jpg" alt ="">
-        <p><strong> <i> LƯ THỊ NHƯ  (sinh viên) </i></strong></p>
+        <p><strong> <i> LƯ THỊ NHƯ MỸ (sinh viên) </i></strong></p>
         <strong><ol type="I"> 
             <li> THÔNG TIN CÁ NHÂN </strong>
                 <ul>
                     <li> Giới tính: Nữ</li>
                     <li> Ngày sinh: 30/01/2005</li>
-                    <li> Quê quán: Tân Bằng, Thới Bình, Cà Mau</li>
+                    <li> Quê quán: xã x, huyện y, tỉnh zz</li>
                 </UL>
             </li>
             <li><strong>MẠNG XÃ HỘI </strong>
@@ -70,17 +70,17 @@
             </li>
             <li><strong> HỌC VẤN</strong>  
                 <ul>
-                    <li>2011-2016: Trường Tiểu học Tam Đông 2.HM</li>
-                    <li>2016-2020: Trường THCS Tam Đông 1.HM </li>
-                    <li>2020-2023: Trường THPT Lý Thường Kiệt.HM</li>
-                    <li>2023-nay:  Trường đại học Sư phạm TP.HCM</li>
+                    <li>2011-2016: Trường Tiểu học x</li>
+                    <li>2016-2020: Trường THCS y </li>
+                    <li>2020-2023: Trường THPT z</li>
+                    <li>2023-nay:  Trường đại học Sư Phạm TPHCMTPHCM</li>
                 </ul>     
             </li>
            
             <li><strong> MỤC TIÊU </strong>
                 <UL>
                     <li>Nâng cao trình độ giao tiếp Tiếng Anh</li>
-                    <li>Học thêm 1 ngôn ngữ cụ thể là Tiếng Trung</li>
+                    <li>Nâng cao trình độ chuyên mônmôn</li>
                     <li>Mở rộng các mối quan hệ trong học tập và làm việc</li>
                 </UL>
             </li>
