--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <H1>Giới Thiệu Bản Thân</H1>
     <style> 
       .box{ 
-        background-color: aqua;
+        background-color: black;
         width: 200px; height: 200px;
         border: 1px dotted redred;
         margin: 5px ;
@@ -37,7 +37,7 @@
         </style>
     </head>
     <body>
-        <img src="https://i.pinimg.com/236x/e1/6c/70/e16c704fc0b655e553dd7a1a8a00475d.jpg" alt ="">
+        <img src="https://pin.it/372dyfG" alt ="">
         <p><strong> <i> LƯ THỊ NHƯ MỸ (sinh viên) </i></strong></p>
         <strong><ol type="I"> 
             <li> THÔNG TIN CÁ NHÂN </strong>
