--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <H1>Giới Thiệu Bản Thân</H1>
     <style> 
       .box{ 
-        background-color: black;
+        background-color: pink;
         width: 200px; height: 200px;
         border: 1px dotted redred;
         margin: 5px ;
@@ -31,8 +31,8 @@
         <H1> MY PAGE</H1>
         <style>
             body{
-                background: pink;
-                color: black;
+                background: black;
+                color: while;
             }
         </style>
     </head>
