--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <style>
             body{
                 background: black;
-                color: while;
+                color: white;
             }
         </style>
     </head>
