--- a/index.html
+++ b/index.html
@@ -1,92 +1,16 @@
 </DOC.HTML>
 <html lang="en">
-  <head>
-    <H1>Giới Thiệu Bản Thân</H1>
-    <style> 
-      .box{ 
-        background-color: pink;
-        width: 200px; height: 200px;
-        border: 1px dotted redred;
-        margin: 5px ;
-        padding: 6px ;
-    </style>
-  </head>
+<head>
+<litle> hồ cá vui nhộn </litle>
+  <meta charset="uft-8">
+  <link rel="stylesheet" href="mestyle.css">
+</head>
   <body>
-    <div class= "container"> 
-      <div class="box">
-        <p>Họ và tên: Lư Thị Như Mỹ</p>
-        <p>Tuổi: 18</p>
-        <p>Ngày sinh: 30/01/2005</p>
-        <p>Số điện thoại: 0349862***</p>
-        <p>Địa chỉ: phường x, quận y, thành phố z</p>
-        <p>Email: luythinhumy******@gmail.com</p>
-      </div>
+    <div id="content">
+      <div id="shark"><img src=" images/shark.png"; width =" auto" height="auto"></div>
     </div>
-</body>
+  </body>
 </html>
 
-</DOC.HTML>
-<html>
-    <head>
-        <H1> MY PAGE</H1>
-        <style>
-            body{
-                background: black;
-                color: white;
-            }
-        </style>
-    </head>
-    <body>
-        <img src="https://pin.it/372dyfG" alt ="">
-        <p><strong> <i> LƯ THỊ NHƯ MỸ (sinh viên) </i></strong></p>
-        <strong><ol type="I"> 
-            <li> THÔNG TIN CÁ NHÂN </strong>
-                <ul>
-                    <li> Giới tính: Nữ</li>
-                    <li> Ngày sinh: 30/01/2005</li>
-                    <li> Quê quán: xã x, huyện y, tỉnh zz</li>
-                </UL>
-            </li>
-            <li><strong>MẠNG XÃ HỘI </strong>
-                <ul>
-                    <li>Facebook:</li>
-                    <li>Instagram: </li>
-                </UL>
-            </li>
-            <li><strong> GIỚI THIỆU BẢN THÂN</strong>
-                <ul>
-                    <li> Là sinh viên năm nhất -K49</li>
-                    <li> Ngành: Sư phạm Tin học</li>
-                    <li> Khoa: <a href =" https://hcmue.edu.vn/vi/khoa-bo-mon/khoa-cntt?fbclid=IwAR2TL6rdt9VoQPmBHVoB-ppUWlI_fbGFRQzCmkIu3V3GVHY0TAAsDDfa5Lk"> Công nghệ thông tin </a> </li>
-                </ul>
-            </li>
-             <li><strong> ĐIỂM MẠNH </strong>  
-                <ul>
-                    <li> Hòa đồng, thân thiện</li>
-                    <li> Độc lập trong công việc và cuộc sống </li>
-                    <li> Có khả năng thích ứng với môi trường nhanh chóng</li>
-                    <li> Có trách nhiệm với bản thân, gia đình và trong công việc, học tập</li>
-                </ul>     
-            </li>
-            <li><strong> HỌC VẤN</strong>  
-                <ul>
-                    <li>2011-2016: Trường Tiểu học x</li>
-                    <li>2016-2020: Trường THCS y </li>
-                    <li>2020-2023: Trường THPT z</li>
-                    <li>2023-nay:  Trường đại học Sư Phạm TPHCMTPHCM</li>
-                </ul>     
-            </li>
-           
-            <li><strong> MỤC TIÊU </strong>
-                <UL>
-                    <li>Nâng cao trình độ giao tiếp Tiếng Anh</li>
-                    <li>Nâng cao trình độ chuyên mônmôn</li>
-                    <li>Mở rộng các mối quan hệ trong học tập và làm việc</li>
-                </UL>
-            </li>
-            <li><strong> SỞ THÍCH </strong>
-            </li>
-        </ol>
-
-    </body>
-</html>
+ 
+   
