--- a/cv.html
+++ b/cv.html
@@ -112,8 +112,7 @@
             </div>
             <div class="about">
                 <h2 class="title2">Kinh nghiệm làm việc </h2>
-                <h4 class="title2">Gia sư</h4>
-                <p> Từ tháng 11/2022-hiện nay: Dạy kèm tại nhà kiến thức cơ bản môn toán lớp 6, lớp 7, lớp 8, lớp 9.</p>
+                <p> Từ tháng 11/2023-hiện nay: thành viên ban chủ nhiệm, điều hành tại câu lạc bộ văn hóa nghệ thuật trường Đại học sư phạm TPHCM.</p>
             </div>
             <div class="about skills">
                 <h2 class="title2">Kĩ năng</h2>
