--- a/layout.html
+++ b/layout.html
@@ -187,7 +187,7 @@
      </div>
      <footer class="panel panel-default">
          <div class = "panel-heading text-center">
-             <p>Bản quyền thuộc về Lư Thị Như Mỹ&reg;.</p>
+             <p>Bản quyền thuộc về Trương Thanh Toàn&reg;.</p>
          </div>
      </footer>
  </div>
