--- a/cv.html
+++ b/cv.html
@@ -140,15 +140,15 @@
                 <div class="box">
                     <h4>PHOTOSHOP</h4>
                     <div class="percent">
-                        <div style="width:60%;"></div>
+                        <div style="width:50%;"></div>
                     </div>
-                    <div class="skill_percent">60%</div>
+                    <div class="skill_percent">50%</div>
                 </div>
             </div>
 
             <div class="about performance">
                 <h2 class="title2">Thành tích</h2>
-                <p>-Lớp 10: đạt được giấy khen hoa điểm 10.<br><br>-Tốt nghiệp THPT loại giỏi. Điểm trung bình 9.0/10.</p>
+                <p>-Lớp 10: đạt được giấy khen hoa điểm 10.<br><br>-Tốt nghiệp THPT loại khá.</p>
             </div>
 
             <div class="about interest">
