--- a/trangkehoachhoctap.html
+++ b/trangkehoachhoctap.html
@@ -1,8 +1,1 @@
-<div id="content">
-    <p>Họ và tên: Lư Thị Như Mỹ</p>
-    <p>Sinh ngày: 30/01/2005</p>
-    <p>Tuổi: 18</p>
-    <p>Điện thoại: 0349862075</p>
-    <p>Địa chỉ: Kí túc xá Đại học Sư Phạm TP.HCM </p>
-    <p>Email: luythinhumy2000tb@gmail.com</p>
-</div>
+<p>- Hoàn thành chương trình đại học ngành Sư phạm Tin học, khoa Công nghệ thông tin, trường Đại học Sư phạm Thành phố Hồ Chí Minh.<br><br>-Có được vị trí việc làm phù hợp.</p>
