--- a/website.html
+++ b/website.html
@@ -12,15 +12,12 @@
         <header>
             <div class="cf-title-06">
                 <h3>
-                  <span>GIỚI THIỆU BẢN THÂN</span>
+                  <span>WEBSITE CÁ NHÂN</span>
                 </h3>
               </div>
-            <div style="position: absolute;top: 5px;right: 5px;">
-                <img src="https://i.pinimg.com/originals/66/d1/4a/66d14aec6cd11d59264dd58525fdb449.jpg" width="32" height="32">
-            </div>
         </header>
         <nav>
-            <div style="float:left">
+            <div style="float: left">
                 <ul>
                     <li><a href="trangchu.html">Trang chủ</a></li>
                     <li><a href="trangkehoachhoctap.html">Kế hoạch học tập</a></li>
@@ -28,30 +25,23 @@
                     <li><a href="tranglienhe.html">Liên hệ</a></li>
                 </ul>
             </div>
-            <div style="float: right;">
-                <img src="https://i.pinimg.com/originals/66/d1/4a/66d14aec6cd11d59264dd58525fdb449.jpg" width="24" height="24">
-                <img src="https://i.pinimg.com/originals/66/d1/4a/66d14aec6cd11d59264dd58525fdb449.jpg" width="24" height="24">
-                <img src="https://i.pinimg.com/originals/66/d1/4a/66d14aec6cd11d59264dd58525fdb449.jpg" width="24" height="24">
-                <img src="https://i.pinimg.com/originals/66/d1/4a/66d14aec6cd11d59264dd58525fdb449.jpg" width="24" height="24">
-
-            </div>
         </nav>
-        <div class="container">
-            <div style="top: 7px;right: 7px;">
-                        <img src="https://i.pinimg.com/originals/9f/74/68/9f7468fa70b8d44aaa9b66c348fd0d8f.jpg">
-                    </div>
-                    </div>
+        <div>
+            <img src="https://i.pinimg.com/originals/9f/74/68/9f7468fa70b8d44aaa9b66c348fd0d8f.jpg" hspace="10px" vspace="10px" wight="300px" height ="300px">
+        </div>
         <div style="clear: both;"></div>
         <div id="content">
             <p>Họ và tên: Lư Thị Như Mỹ</p>
             <p>Sinh ngày: 30/01/2005</p>
             <p>Tuổi: 18</p>
-            <p>Điện thoại: 0349862075</p>
+            <p>Điện thoại: 0349862***</p>
             <p>Địa chỉ:351A, Lạc Long Quân, phường 5, quận 11 (Kí túc xá Đại học Sư Phạm TP.HCM) </p>
         </div>
         <div id="right"></div>
-        <footer>
-            Bản quyền thuộc về Lư Thị Như Mỹ &reg;.
+        <footer class="panel panel-default">
+            <div class = "panel-heading text-center">
+                <p>Made by Lư Thị Như Mỹ</p>
+            </div>
         </footer>
     </div>
 </body>
