--- a/ho_ca.html
+++ b/ho_ca.html
@@ -9,5 +9,8 @@
         <div id="content">
             <div id="shark"><img src="images/shark.png"; width="auto" height="auto"></div>
         </div>
+        <div id="content">
+            <div id="turlte"><img src="turtle.png"; width="100px" height="100px"></div>
+        </div>
     </body>
 </html>
