--- a/quanli.html
+++ b/quanli.html
@@ -7,8 +7,8 @@
     <title>Quản lý ứng dụng</title>
     <style>
         body {
-    background-color: #a1affc;
-    color: #fc0909;
+    background-color: lightblue;
+    color: #003147;
     font-family: Arial, sans-serif;
     margin: 20px;
 }
@@ -28,7 +28,7 @@ h1 {
 
 #app-form button {
     padding: 5px 10px;
-    background-color: #4CAF50;
+    background-color: #003147;
     color: white;
     border: none;
     cursor: pointer;
@@ -40,12 +40,12 @@ h1 {
 
 #app-list button {
     margin-left: 10px;
-    color: #ff79c6;
+    color: lightblue;
 }
     </style>
 </head>
 <body>
-    <h1>Quản lý ứng dụng</h1>
+    <h1>Quản lí ứng dụng</h1>
 
     <form id="app-form">
         <input type="text" id="app-name" placeholder="Nhập tên ứng dụng">
