--- a/halloween.html
+++ b/halloween.html
@@ -40,7 +40,6 @@
             <div class="container d-flex flex-column align-items-center justify-content-center h-100">
                 <h1>Halloween</h1>
                 <div class="fw-bold text-uppercase" id="countdown"></div>
-                <button class="btn-orange mt-5 fw-bold" type="button"> More about halloween</button> 
 
                 <img class="img-spider img-fluid position-absolute" src="spider.png" alt="spider">
                 <img class="img-ghost2 img-fluid position-absolute" src="ghost.png" alt="ghost2">
@@ -164,7 +163,6 @@
                             <video class="img-fluid" alt="" autoplay muted>
                                 <source src="video_preview_h264.mp4" >
                                 <source src="video_preview_h264.ogg" >
-                                Your browser does not support the video tag.
                               </video>
                 </div>
             </div>
@@ -174,10 +172,10 @@
         </section>
 
         <footer class="bg-black text-white">
-            <p class="m-0 py-3 text-center"><span>Happy Halloween</span> - Made by Lư Thị Như Mỹ</p>
+            <p class="m-0 py-3 text-center">  Made by Lư Thị Như Mỹ</p>
         </footer>
         
-        <script src="./script.js" async defer></script>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
