--- a/halloween.html
+++ b/halloween.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -42,9 +41,9 @@
                 <div class="fw-bold text-uppercase" id="countdown"></div>
 
                 <img class="img-spider img-fluid position-absolute" src="spider.png" alt="spider">
-                <img class="img-ghost2 img-fluid position-absolute" src="ghost.png" alt="ghost2">
-                <img class="img-ghost img-fluid position-absolute" src="ghost2.png" alt="ghost">
-                <img class="img-moon img-fluid position-absolute" src="moon.png" alt="moon">
+                <img class="img-ghost2 img-fluid position-absolute" src="halloween/Iconcreme-Halloween-Cat.512.png" alt="cat">
+                <img class="img-ghost img-fluid position-absolute" src="halloween/Iconcreme-Halloween-Home.512.png" alt="ghost">
+                <img class="img-moon img-fluid position-absolute" src="halloween/Iconcreme-Halloween-Mummy.512.png" alt="moon">
             </div>
         </header>
 
